api 명세서 및 테스트