@@ -1,14 +1,13 @@
 package com.alioth.server.domain.team.controller;
 
+import com.alioth.server.common.domain.TypeChange;
 import com.alioth.server.common.response.CommonResponse;
+import com.alioth.server.domain.member.domain.SalesMemberType;
 import com.alioth.server.domain.member.domain.SalesMembers;
-import com.alioth.server.domain.member.dto.res.SalesMemberTeamListResDto;
+import com.alioth.server.domain.member.dto.res.SMTeamListResDto;
 import com.alioth.server.domain.member.service.SalesMemberService;
 import com.alioth.server.domain.team.domain.Team;
-import com.alioth.server.domain.team.dto.TeamAddMemberDto;
-import com.alioth.server.domain.team.dto.TeamCreateDto;
-import com.alioth.server.domain.team.dto.TeamDto;
-import com.alioth.server.domain.team.dto.TeamUpdateDto;
+import com.alioth.server.domain.team.dto.TeamReqDto;
 import com.alioth.server.domain.team.service.TeamService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -19,7 +18,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
@@ -29,44 +27,37 @@ public class TeamController {
 
     private final TeamService teamService;
     private final SalesMemberService salesMemberService;
+    private final TypeChange typeChange;
 
     @PostMapping("/create")
-    public ResponseEntity<CommonResponse> createTeam(@RequestBody TeamCreateDto dto) {
+    public ResponseEntity<CommonResponse> createTeam(@RequestBody TeamReqDto dto) {
         SalesMembers teamManager = salesMemberService.findBySalesMemberCode(dto.teamManagerCode());
-        Team team = teamService.createTeam(dto,teamManager);
-        salesMemberService.updateTeam(teamManager.getId(),team);
-        TeamDto teamDto= TeamDto.builder()
-                .teamName(team.getTeamName())
-                .teamCode(team.getTeamCode())
-                .teamMemberList(team.getTeamMembers().stream()
-                        .map(a->
-                                SalesMemberTeamListResDto.builder()
-                                        .name(a.getName())
-                                        .email(a.getEmail())
-                                        .phone(a.getPhone())
-                                        .extensionNumber(a.getExtensionNumber())
-                                        .officeAddress(a.getOfficeAddress())
-                                        .rank(a.getRank())
-                                        .address(a.getAddress())
-                                        .salesMemberCode(a.getSalesMemberCode())
-                                        .profileImage(a.getProfileImage())
-                                        .build()
-                        ).collect(Collectors.toList()))
-                .build();
-        return CommonResponse.responseMessage(
-                HttpStatus.CREATED,
-                "successfully created",
-                teamDto
-        );
+        if (teamManager.getRank() == SalesMemberType.MANAGER) {
+            Team team = teamService.createTeam(dto, teamManager);
+            salesMemberService.updateTeam(teamManager.getId(), team);
+            List<SMTeamListResDto> list = team.getTeamMembers().stream().map(typeChange::smToSmTeamListResDto).toList();
+            return CommonResponse.responseMessage(
+                    HttpStatus.CREATED,
+                    "successfully created",
+                    typeChange.teamToTeamReqDto(team,list)
+            );
+        } else {
+            throw new IllegalArgumentException("직급을 확인해주세요");
+        }
     }
 
     @PatchMapping("/update/{teamId}")
-    public ResponseEntity<CommonResponse> updateTeam(@RequestBody @Valid TeamUpdateDto dto,
+    public ResponseEntity<CommonResponse> updateTeam(@RequestBody @Valid TeamReqDto dto,
                                         @PathVariable("teamId") Long id) {
-        teamService.updateTeam(dto,id);
-        return CommonResponse.responseMessage(
-                HttpStatus.CREATED, "successfully updated"
-        );
+        SalesMembers teamManager = salesMemberService.findBySalesMemberCode(dto.teamManagerCode());
+        if (teamManager.getRank() == SalesMemberType.MANAGER) {
+            teamService.updateTeam(dto, id);
+            return CommonResponse.responseMessage(
+                    HttpStatus.CREATED, "successfully updated"
+            );
+        } else {
+            throw new IllegalArgumentException("직급을 확인해주세요");
+        }
     }
 
     @DeleteMapping("/delete/{teamId}")
@@ -87,25 +78,17 @@ public class TeamController {
         );
     }
 
-    //팀 상세 정보 조회
-    @GetMapping("/info/{teamId}")
-    public ResponseEntity<CommonResponse> teamInfo(@PathVariable("teamId") Long teamId ) {
-
-        return CommonResponse.responseMessage(
-                HttpStatus.OK,
-                "successfully loaded",
-                teamService.findById(teamId));
-    }
-
     //팀원 추가
     @PostMapping("/addMembers/{teamId}")
-    public ResponseEntity<CommonResponse> addMembers(@RequestBody TeamAddMemberDto dto,
+    public ResponseEntity<CommonResponse> addMembers(@RequestBody List<Long> salesMemeberList,
                                                      @PathVariable("teamId") Long teamId) {
         List<SalesMembers> teamMembers = new ArrayList<>();
-        for(Long salesMemberCode: dto.salesMemberCodes()){
-            SalesMembers teamMember=salesMemberService.findBySalesMemberCode(salesMemberCode);
-            salesMemberService.updateTeam(teamMember.getId(),teamService.findById(teamId));
-            teamMembers.add(teamMember);
+        for(Long salesMemberCode: salesMemeberList){
+            SalesMembers member = salesMemberService.findBySalesMemberCode(salesMemberCode);
+            if(member.getQuit().equals("N")){
+                salesMemberService.updateTeam(member.getId(),teamService.findById(teamId));
+                teamMembers.add(member);
+            }
         }
         teamService.addMembersToTeam(teamId,teamMembers);
         return CommonResponse.responseMessage(
